
2011-10-03
- bios/machine.c bios/screen.c: Minor adjustments to ease next conditional
  compilation. (VRI)
- util/intmath.c include/intmath.h vdi_vdi_line.c: Moved Isqrt() to intmath.c
  since it is the right place for integer math. (VRI)
- doc/bugs.txt doc/todo.txt: Update to reflect current status. Contributed by
  Roger Burrows. (VRI)
- bdos/fs.h bdos/fsdir.h bdos/fsopnclo.c: Replace magic numbers for file
  attributes with #defines. Contributed by Roger Burrows. (VRI)

2011-10-05
- doc/fat16.txt: Add documentation for FAT16 filesystem code. Contributed by
  Roger Burrows. (VRI)
- bdos/gemerror.h bios/gemerror.h include/gemerror.h: Move gemerror.h from
  bios/ to include/ and remove gemerror.h from bdos/. Contributed by Roger
  Burrows. (VRI)
- po/es.po: Updated Spanish translation. Contributed by David Galvez. (VRI)

2011-10-06
- tools/bug.c: Removed unused variable. (VRI)
- Makefile: Fixed problems when switching between UNIQUE builds. (THH)

2011-10-08
- Makefile: The needcountry.tmp hack caused trouble on some build systems, such
  as Ubuntu. Replaced by a more robust phony target. (VRI)
- Makefile: Introduced the ROM_256 variable to specify the name of the 256 KB
  ROM and produce more meaningful message with make allbin. (VRI)
- Makefile: Introduced the ROM_192 variable to specify the name of the 192 KB
  ROM and produce more meaningful message with make all192. (VRI)
- desk/deskact.c: Fixed warnings with make 192. (VRI)
- Makefile: allbin target now builds the 192 Kb images, too. (THH)

2011-10-09
- doc/bugs.txt: Updated the bug list. Contributed by Eero Tamminen. (VRI)

2011-10-10
- po/gr.po: Updated Greek translation. Contributed by Christos Tziotzis. (VRI)

2011-10-14
- bdos/*: Removed all unnecessary #includes from all files within the bdos
  directory. Contributed by Roger Burrows. (THH)
- desk/deskdir.c: Fixed bug that the cursor is sometimes left in the hourglass
  shape after copying a file. Contributed by Roger Burrows. (THH)